After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700177 - rhythmbox fails to build introspection with Gtk 3.9
rhythmbox fails to build introspection with Gtk 3.9
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on: 696457
Blocks:
 
 
Reported: 2013-05-12 14:12 UTC by Dominique Leuenberger
Modified: 2013-05-16 22:54 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Dominique Leuenberger 2013-05-12 14:12:50 UTC
+++ This bug was initially created as a clone of Bug #700166 +++

Since upgrading Gtk to 3.9.0, rhythmbox fails to build the introspection part.

The build fails with:

[  329s] 
[  329s] (process:21192): GLib-CRITICAL **: g_array_append_vals: assertion `array' failed
[  329s] 
[  329s] (process:21192): GLib-CRITICAL **: g_hash_table_lookup: assertion `hash_table != NULL' failed
[  329s] 
[  329s] (process:21192): GLib-CRITICAL **: g_hash_table_insert_internal: assertion `hash_table != NULL' failed
[  329s] 
[  329s] (process:21192): Gdk-ERROR **: No GDK backend found (*)
[  329s] Command '['/home/abuild/rpmbuild/BUILD/rhythmbox-2.99.1/bindings/gi/tmp-introspectfChYdO/RB-3.0', '--introspect-dump=/home/abuild/rpmbuild/BUILD/rhythmbox-2.99.1/bindings/gi/tmp-introspectfChYdO/functions.txt,/home/abuild/rpmbuild/BUILD/rhythmbox-2.99.1/bindings/gi/tmp-introspectfChYdO/dump.xml']' returned non-zero exit status -5
[  329s] make[3]: *** [RB-3.0.gir] Error 1
[  329s] make[3]: Leaving directory `/home/abuild/rpmbuild/BUILD/rhythmbox-2.99.1/bindings/gi'
[  329s] make[2]: *** [all-recursive] Error 1
[  329s] make[2]: Leaving directory `/home/abuild/rpmbuild/BUILD/rhythmbox-2.99.1/bindings'


This typically happens on build bots without X running (which should not be needed to build the code anyway).

I'll produce a stack trace for reference.
Comment 1 Dominique Leuenberger 2013-05-12 14:20:34 UTC
backtrace:

  • #0 g_logv
    from /usr/lib64/libglib-2.0.so.0
  • #1 g_log
    from /usr/lib64/libglib-2.0.so.0
  • #2 gdk_display_manager_get
    from /usr/lib64/libgdk-3.so.0
  • #3 gdk_display_get_default
    from /usr/lib64/libgdk-3.so.0
  • #4 gdk_screen_get_default
    from /usr/lib64/libgdk-3.so.0
  • #5 gtk_icon_theme_get_default
    from /usr/lib64/libgtk-3.so.0
  • #6 rb_rating_pixbufs_new
    at rb-rating-helper.c line 113
  • #7 rb_cell_renderer_rating_class_init
    at rb-cell-renderer-rating.c line 133
  • #8 rb_cell_renderer_rating_class_intern_init
    at rb-cell-renderer-rating.c line 77
  • #9 g_type_class_ref
    from /usr/lib64/libgobject-2.0.so.0
  • #10 dump_properties
  • #11 dump_object_type
  • #12 dump_type
  • #13 dump_irepository
  • #14 main

Comment 2 Jonathan Matthew 2013-05-16 22:54:36 UTC
commit fd6a4bc should fix this.