avoid doing work in class init functions

Class init functions are called as part of the introspection
process.  During the build process we might not have a display
to talk to, so we need to avoid doing anything that requires
gdk to connect to the display.

https://bugzilla.gnome.org/show_bug.cgi?id=700177